# mle-exercises

./: .gitignore  LICENSE  README.md  ml_canvas.exercicios.py  pyproject.toml
.github/workflows/: update-tree.yml
data/: telco_customer_churn.py
projects/: README.md
projects/churn_prediction/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.mlflow  Makefile  README.md  docker-compose.yml  link_repositorio.txt  ml_canvas.exercicios.py  model_card.md  pyproject.toml  requirements-mlflow.txt  requirements-runtime.txt  requirements.txt
projects/churn_prediction/configs/: best_model.yml
projects/churn_prediction/docs/: archtecture.md  ml_canvas_exercise.py  monitoring.md
projects/churn_prediction/examples/: payload.json
projects/churn_prediction/experiments/baselines/: baseline_model.py
projects/churn_prediction/experiments/comparison/: comparison_model.py  train_sklearn.py
projects/churn_prediction/experiments/deep_learning/: torch_mlp.py  torch_mlp_process.py  train_mlp_torch.py
projects/churn_prediction/experiments/model_selection/: model_comparison.py
projects/churn_prediction/experiments/selection/: compare_models.py  cost_toolkit_metrics.py
projects/churn_prediction/infra/nginx/: mlflow.conf
projects/churn_prediction/infra/postgres/init/: 01-create-churn-db.sql  02-create-predictions-table.sql
projects/churn_prediction/infra/prometheus/: prometheus.yml
projects/churn_prediction/notebooks/: eda.ipynb
projects/churn_prediction/scripts/: run_api.sh
projects/churn_prediction/src/api/: app.py  metrics.py
projects/churn_prediction/src/core/models/: trainer.py
projects/churn_prediction/src/data/: clean_data.py  encoding.py  feature_engineering.py  load_data.py  pipelines.py  preprocess.py  transformers.py
projects/churn_prediction/src/entrypoints/: cli.py
projects/churn_prediction/src/infra/db/: predictions_repo.py
projects/churn_prediction/src/infra/jobs/: train.py
projects/churn_prediction/src/infra/mlflow/: params.py
projects/churn_prediction/src/jobs/: drift.py  generate_traffic.py  make_baseline.py  predict.py  train.py
projects/churn_prediction/src/ml/: churn_pyfunc.py  churn_pyfunc_mlp.py  churn_pyfunc_xgb.py  cost_utils.py  data_utils.py  experiment_runner.py  logging_utils.py  metrics_utils.py  mlflow_selection_utils.py  mlflow_utils.py  persistence.py
projects/churn_prediction/src/models/: baseline_model.py  feature_selection.py  model_comparison.py  torch_mlp.py
projects/churn_prediction/src/tests/: conftest.py
projects/churn_prediction/src/tests/integration/: test_e2e.py
projects/churn_prediction/src/tests/units/: test_mlflow_fetch_best_params.py  test_preprocessor_sanity.py  test_trainer_pipeline.py
projects/churn_prediction/src/utils/: constants.py  helpers.py
projects/churn_prediction/tests/: conftest.py
projects/churn_prediction/tests/integration/: test_api.py  test_e2e.py  test_mlflow_logging.py
projects/churn_prediction/tests/units/: test_load_data.py  test_mlflow_fetch_best_params.py  test_preprocessing.py  test_preprocessor_sanity.py  test_pyfunc_contract_unit.py  test_trainer_pipeline.py  test_trainer_predict_pyfunc_mode.py
src/data/: clean_data.py  load_data.py
(+1 files in other folders)
