[project]
name = "churn-prediction"
version = "0.1.0"
description = "Projeto de ML para previsão de churn"
authors=[
    {name = "Jessyca Machado", email = "jessycamachado0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.1",
    "scikit-learn>=1.4",
    "mlflow>=2.8",
    "fastapi>=0.111",
    "uvicorn>=0.23",
    "pandas>=2.2",
    "numpy>=1.26",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.0"
ruff = "^0.3"
ipykernel = "^6.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
