[project]
name = "churn_prediction"
version = "0.1.0"
description = "Projeto de ML para previsão de churn"
authors=[
    {name = "Jessyca Machado", email = "jessycamachado0@gmail.com"}
]
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "pip>=24.0",
    "torch==2.11.0",
    "scikit-learn>=1.2,<2.0",
    "mlflow>=2.8",
    "fastapi>=0.111",
    "uvicorn>=0.23",
    "pandas>=2.2",
    "numpy>=1.26,>2.0",
    "plotly>=6.6.0",
    "optuna>=3.6",            # ou a versão que você estiver usando
    "optuna-integration>=3.6",
    "skorch>=1.0",
    # Persistência / serialização segura
    "joblib>=1.3",
    "skops>=0.11",
    # Security patches (Dependabot alerts)
    "azure-core>=1.38.0",
    "urllib3>=2.6.3",
    "pillow>=12.1.1",
    "protobuf>=6.33.5",
    "cryptography>=46.0.5",
    "aiohttp>=3.13.3",
    "pyasn1>=0.6.2",
    "sqlparse>=0.5.4",
    "rich>=15.0.0",
    "catboost>=1.2.10",
    "xgboost>=3.2.0",
    "lightgbm>=4.6.0",
    "scikit-posthocs>=0.12.0",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29",
    "nbformat>=4.2.0",
    "ruff>=0.12.10",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
